clib/camwire/camwire.h


#define CAMWIRE_SUCCESS 0
#define CAMWIRE_FAILURE 1
#define CAMWIRE_ID_MAX_CHARS	100
typedef struct 
{
    char vendor[CAMWIRE_ID_MAX_CHARS+1];
    char model[CAMWIRE_ID_MAX_CHARS+1];
    char chip[CAMWIRE_ID_MAX_CHARS+1];
}
Camwire_id;
typedef enum
{
    CAMWIRE_PIXEL_INVALID,
    CAMWIRE_PIXEL_MONO8,	
    CAMWIRE_PIXEL_YUV411,	
    CAMWIRE_PIXEL_YUV422,	
    CAMWIRE_PIXEL_YUV444,	
    CAMWIRE_PIXEL_RGB8,		
    CAMWIRE_PIXEL_MONO16,	
    CAMWIRE_PIXEL_RGB16,	
    CAMWIRE_PIXEL_MONO16S,	
    CAMWIRE_PIXEL_RGB16S,	
    CAMWIRE_PIXEL_RAW8,		
    CAMWIRE_PIXEL_RAW16		
}
Camwire_pixel;
typedef enum
{
    CAMWIRE_TILING_INVALID,
    CAMWIRE_TILING_RGGB,
    CAMWIRE_TILING_GBRG,
    CAMWIRE_TILING_GRBG,
    CAMWIRE_TILING_BGGR,
    CAMWIRE_TILING_UYVY,
    CAMWIRE_TILING_YUYV
}
Camwire_tiling;
typedef struct 
{
    int num_frame_buffers;
    double gain;
    double brightness;
    double blue_gain, red_gain;
    int left, top, width, height;
    Camwire_pixel coding;
    double frame_rate, shutter;
    int external_trigger, trigger_polarity;
    int single_shot, running;
    int shadow;
}
Camwire_state;
typedef struct
{
    int bus_speed;
    int format;
    int mode;
    int max_packets;
    int min_pixels;
    double trig_setup_time;
    double exposure_quantum;
    double exposure_offset;
    double line_transfer_time;
    double transmit_setup_time;
    int transmit_overlap;
    int drop_frames;
    char dma_device_name[CAMWIRE_CONF_DMA_DEVICE_MAX_CHARS+1];
}
Camwire_conf;
int camwire_create(const Camwire_handle c_handle);
int camwire_create_from_struct(const Camwire_handle c_handle,
			       const Camwire_state *set);
void camwire_destroy(const Camwire_handle c_handle);
int camwire_get_state(const Camwire_handle c_handle, Camwire_state *set);
int camwire_set_state(const Camwire_handle c_handle, const Camwire_state *set);
int camwire_read_state_from_file(const char *filename, Camwire_state *set);
int camwire_write_state_to_file(const char *filename,
				const Camwire_state *set);
int camwire_get_config(const Camwire_handle c_handle, Camwire_conf *cfg);
int camwire_print_config(const Camwire_conf *cfg);
int camwire_get_identifier(const Camwire_handle c_handle,
			   Camwire_id *identifier);
int camwire_get_stateshadow(const Camwire_handle c_handle, int *shadow);
int camwire_set_stateshadow(const Camwire_handle c_handle, const int shadow);
int camwire_get_num_framebuffers(const Camwire_handle c_handle,
				 int *num_frame_buffers);
int camwire_set_num_framebuffers(const Camwire_handle c_handle,
				 const int num_frame_buffers);
int camwire_get_framebuffer_lag(const Camwire_handle c_handle,
				int *buffer_lag);
int camwire_flush_framebuffers(const Camwire_handle c_handle,
			       const int num_to_flush,
			       int *num_flushed,
			       int *buffer_lag);
int camwire_get_frame_offset(const Camwire_handle c_handle, int *left,
			 int *top);
int camwire_set_frame_offset(const Camwire_handle c_handle,
			     const int left, const int top);
int camwire_get_frame_size(const Camwire_handle c_handle, int *width,
			   int *height);
int camwire_set_frame_size(const Camwire_handle c_handle, const int width,
			   const int height);
int camwire_get_pixel_coding(const Camwire_handle c_handle,
			     Camwire_pixel *coding);
int camwire_set_pixel_coding(const Camwire_handle c_handle,
			     const Camwire_pixel coding);
int camwire_get_pixel_tiling(const Camwire_handle c_handle,
			     Camwire_tiling *tiling);
int camwire_pixel_depth(const Camwire_pixel coding, int *depth);
int camwire_get_framerate(const Camwire_handle c_handle, double *framerate);
int camwire_set_framerate(const Camwire_handle c_handle,
			  const double framerate);
int camwire_get_shutter(const Camwire_handle c_handle, double *shutter);
int camwire_set_shutter(const Camwire_handle c_handle, const double shutter);
int camwire_get_trigger_source(const Camwire_handle c_handle, int *external);
int camwire_set_trigger_source(const Camwire_handle c_handle,
			       const int external);
int camwire_get_trigger_polarity(const Camwire_handle c_handle, int *rising);
int camwire_set_trigger_polarity(const Camwire_handle c_handle,
				 const int rising);
int camwire_get_gain(const Camwire_handle c_handle, double *gain);
int camwire_set_gain(const Camwire_handle c_handle,
			   const double gain);
int camwire_get_brightness(const Camwire_handle c_handle, double *brightness);
int camwire_set_brightness(const Camwire_handle c_handle,
			   const double brightness);
int camwire_get_white_balance(const Camwire_handle c_handle, double *blue_gain,
			      double *red_gain);
int camwire_set_white_balance(const Camwire_handle c_handle,
			      const double blue_gain, const double red_gain);
int camwire_get_single_shot(const Camwire_handle c_handle,
			    int *single_shot_on);
int camwire_set_single_shot(const Camwire_handle c_handle,
			    const int single_shot_on);
int camwire_get_run_stop(const Camwire_handle c_handle, int *runsts);
int camwire_set_run_stop(const Camwire_handle c_handle, const int runsts);
int camwire_copy_next_frame(const Camwire_handle c_handle, void *buffer,
			    int *buffer_lag);
int camwire_point_next_frame(const Camwire_handle c_handle, void **buf_ptr,
			     int *buffer_lag);
int camwire_point_next_frame_poll(const Camwire_handle c_handle,
				  void **buf_ptr, int *buffer_lag);
int camwire_unpoint_frame(const Camwire_handle c_handle);
int camwire_get_framenumber(const Camwire_handle c_handle, long *framenumber);